<resources>
    <string name="app_name">Week4</string>
    <string name="_1">T</string>
    <string name="_2">M</string>
    <string name="_3">J</string>
    <string name="_4">B</string>
    <string name="_5">S</string>
    <string name="resize_percentage">50%</string>
    <string name="summoner_name">소환사명</string>
    <string name="error">Error</string>
    <string name="limits_error">Limits Error</string>
    <string name="_20">최근 20 게임</string>
</resources>