<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Theme.Week4.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/summoner_name"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:helperText="Limits : Kor >= 3,   Eng >= 6"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linear_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/summoner_name"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Hestia sin" />

            <TextView
                android:id="@+id/summoner_level"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="93" />

            <TextView
                android:id="@+id/revision_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4/11" />

        </LinearLayout>
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_profile" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_view"
        android:contentDescription=""/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress">

        <Button
            android:id="@+id/button_1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/_1"
            app:iconPadding="1dp"
            app:iconSize="30dp"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/button_2"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/_2"
            app:iconPadding="1dp"
            app:iconSize="30dp"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/button_3"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/_3"
            app:iconPadding="1dp"
            app:iconSize="30dp"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/button_4"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/_4"
            app:iconPadding="1dp"
            app:iconSize="30dp"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/button_5"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/_5"
            app:iconPadding="1dp"
            app:iconSize="30dp"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="1dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>